--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	Stellar by HTML5 UP
+	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Jacob Harwood</title>
+		<title>Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,151 +14,142 @@
 	</head>
 	<body class="is-preload">
 
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Introduction</a></li>
+							<li><a href="#one">Portfolio</a></li>
+							<li><a href="#two">Skills</a></li>
+							<li><a href="#three">Social Links</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<span class="logo"><img src="images/Logo.png" alt="" /></span>
-						<h1>Jacob Harwood</h1>
-						<h2>Welcome to my Portfolio</h2>
-						<p>C++ / Game Dev</p>
-					</header>
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">Portfolio</a></li>
-							<li><a href="#second">Skills</a></li>
-							<li><a href="#cta">Social Links</a></li>
-						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Introduction -->
-							<section id="intro" class="main">
-								<div class="spotlight">
-									<div class="content">
-										<header class="major">
-											<h2>Introduction - About Me</h2>
-										</header>
-										<p>Level 4 BSc Computer Games Development (Hons) student. 
-										Currently studying at Staffordshire University
-										I am an aspiring computer games developer with a passion for games. 
-										More specifically sports simulation games and open world action and adventure games.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
-									</div>
-									<span class="image"><img src="images/profilepic.jpg" alt="" /></span>
-								</div>
-							</section>
-
-						<!-- Projects -->
-							<section id="first" class="main special">
-								<header class="major">
-									<h2>Portfolio - My Projects</h2>
-								</header>
-								<ul class="features">
-									<li>
-										<span class="image"><img src="images/Marble.png" alt=""/></span>
-										<h3>Marble Madness / Unity / C# / Framework</h3>
-										<p>This is the project I produced in semester 1 of my Rapid Games Prototyping module.</p>
-									</li>
-									<li>
-										<span class="image"><img src="images/pacman.jpg" alt=""/></span>
-										<h3>Snake Battler / C++ / S2D Framework</h3>
-										<p>This is an io style game in the style of snake that I made in my Fundamentals of Games and Graphical Systems Module.</p>
-									</li>
-									<li>
-										<span class="image"><img src="images/mario.jpg" alt=""/></span>
-										<h3>Mario / C++</h3>
-										<p>This is the project I made in semester 2 of my Games Engine Creation module.</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
-
-						<!-- Skills -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Skills - What Can I do</h2>
-									<p>Here Is a short summary of some of, but not limited to, my best skills</p>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>C++</strong> 
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>Unity</strong> 
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>C#</strong> 
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>Photoshop</strong>
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>Premiere Pro</strong> 
-									</li>
-								</ul>
-								<p class="content">I have learnt these skills through a variety of avenues. 
-									These range from formal education or in my own time as a hobby to learn something new. 
-									I am always eager to learn a new skill that will contribute and come in handy later down the line</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
-
-						<!-- Social Links -->
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Social Links - Where you can find me</h2>
-									<p>Here is a list of all my social medias where you can contact me</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<!--<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1>Jacob Harwood</h1>
+							<h2>Welcome to my Portfolio</h2>
+							<p>C++ / Game Dev</p>
+							<a href="#" class="image"><img src="images/profilepic.jpg" alt="" data-position="center center" /></a>
+							<p>Level 4 BSc Computer Games Development (Hons) student. 
+								Currently studying at Staffordshire University
+								I am an aspiring computer games developer with a passion for games. 
+								More specifically sports simulation games and open world action and adventure games.</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
+								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
-						</section> -->
+						</div>
+					</section>
+
+				<!-- One -->
+					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-							</ul>
+							<a href="#" class="image"><img src="images/Marble.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Marble Madness</h2>
+										<h3>Unity / C# / Framework</h3>
+									<p>This is the project I produced in semester 1 of my Rapid Games Prototyping module.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">See more</a></li>
+									</ul>
+								</div>
+							</div>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
+						<section>
+							<a href="#" class="image"><img src="images/pacman.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Snake Battler</h2> 
+									<h3>C++ / S2D Framework</h3>
+									<p>This is an io style game in the style of snake that I made in my Fundamentals of Games and Graphical Systems Module.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">See more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/mario.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Mario</h2>
+									<h3>C++</h3>
+									<p>This is the project I made in semester 2 of my Games Engine Creation module.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">See more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>Skills - What can I do?</h2>
+							<p>Here Is a short summary of some of, but not limited to, my best skills. I have learnt these skills through a variety of avenues. 
+								These range from formal education or in my own time as a hobby to learn something new. 
+								I am always eager to learn a new skill that will contribute and come in handy later down the line</p>
+							<div class="features">
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h3>C++</h3>
+									<p>As a part of half of the modules I took at Level 4 for my University course I learnt C++. This included everything from 'Hello World!' to pointers even including reading and writing files.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-lock"></span>
+									<h3>Unity</h3>
+									<p>In my Rapid Games Prototyping module I built on knowledge of unity that I already had from personal projects to create the 'Marble Madness' project and I am currently working on a project called 'Man On' in unity.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-cog"></span>
+									<h3>Photoshop / Photopea</h3>
+									<p> For most of my projects I have had to create assets. I have done this with photoshop. I had previous knowledge of photopea from personal projects as I couldn't afford adobe :( . However now I have access to photoshop I am transferring those skills</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>C#</h3>
+									<p>Similar to C++ I have learnt this language as a part of my modules. Yet I had some prior knowledge from previous attempts at learning unity.</p>
+								</section>
+							</div>
+						</div>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Social Links - Where can you find me?</h2>
+							<p>Here is where you can find me across different mediums.</p>										
+							<ul class="contact">
+								<li>
+									<h3>Social</h3>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									</ul>
+								</li>
+							</ul>							
+						</div>
+					</section>
 
 			</div>
+
+		<!-- Footer -->
+			<footer id="footer" class="wrapper style1-alt">
+				<div class="inner">
+					<ul class="menu">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
