--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 								<li>
 									<h3>Social</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/jacobharwood7" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://uk.linkedin.com/in/jacob-harwood" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</li>
 							</ul>							
