--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Jacob Harwood</title>
-		<link rel="icon" type="image/x-icon" href="images/test.jpg">
+		<link rel="icon" type="image/x-icon" href="images/Favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,9 +43,9 @@
 								Currently studying at Staffordshire University
 								I am an aspiring computer games developer with a passion for games. 
 								More specifically sports simulation games and open world action and adventure games.</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>
+                            <ul class="actions">
+                                <!--<li><a href="#one" class="button scrolly">Learn more</a></li>-->
+                            </ul>
 						</div>
 					</section>
 
@@ -59,7 +59,7 @@
 										<h3>Unity / C# / Framework</h3>
 									<p>This is the project I produced in semester 1 of my Rapid Games Prototyping module.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">See more</a></li>
+										<!--<li><a href="generic.html" class="button">See more</a></li>-->
 									</ul>
 								</div>
 							</div>
@@ -72,7 +72,7 @@
 									<h3>C++ / S2D Framework</h3>
 									<p>This is an io style game in the style of snake that I made in my Fundamentals of Games and Graphical Systems Module.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">See more</a></li>
+										<!--<li><a href="generic.html" class="button">See more</a></li>-->
 									</ul>
 								</div>
 							</div>
@@ -85,7 +85,7 @@
 									<h3>C++</h3>
 									<p>This is the project I made in semester 2 of my Games Engine Creation module.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">See more</a></li>
+										<!--<li><a href="generic.html" class="button">See more</a></li>-->
 									</ul>
 								</div>
 							</div>
