--- a/index.html
+++ b/index.html
@@ -68,9 +68,22 @@
 							<a href="#" class="image"><img src="images/pacman.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Snake Battler</h2> 
+									<h2>Pacman v 100 Ghosts</h2> 
 									<h3>C++ / S2D Framework</h3>
-									<p>This is an io style game in the style of snake that I made in my Fundamentals of Games and Graphical Systems Module.</p>
+									<p>This is an io style game in the style of pacman that I made in my Fundamentals of Games and Graphical Systems Module.</p>
+									<ul class="actions">
+										<!--<li><a href="generic.html" class="button">See more</a></li>-->
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pacman.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Man On</h2> 
+									<h3>C# / Unity</h3>
+									<p>This is a side scrolling shooter game that is made in the unity engine for my Rapid Games Prototyping Module</p>
 									<ul class="actions">
 										<!--<li><a href="generic.html" class="button">See more</a></li>-->
 									</ul>
@@ -106,17 +119,17 @@
 									<p>As a part of half of the modules I took at Level 4 for my University course I learnt C++. This included everything from 'Hello World!' to pointers even including reading and writing files.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
+									<span class="icon solid major fa-desktop"></span>
 									<h3>Unity</h3>
 									<p>In my Rapid Games Prototyping module I built on knowledge of unity that I already had from personal projects to create the 'Marble Madness' project and I am currently working on a project called 'Man On' in unity.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-cog"></span>
+									<span class="icon solid major fa-desktop"></span>
 									<h3>Photoshop / Photopea</h3>
 									<p> For most of my projects I have had to create assets. I have done this with photoshop. I had previous knowledge of photopea from personal projects as I couldn't afford adobe :( . However now I have access to photoshop I am transferring those skills</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-desktop"></span>
+									<span class="icon solid major fa-code"></span>
 									<h3>C#</h3>
 									<p>Similar to C++ I have learnt this language as a part of my modules. Yet I had some prior knowledge from previous attempts at learning unity.</p>
 								</section>
