--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/mario.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/Titan.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Mario</h2>
-									<h3>C++</h3>
-									<p>This is the project I made in semester 2 of my Games Engine Creation module.</p>
+									<h2>Titan's Roots</h2>
+									<h3>C# / Unity</h3>
+									<p>This is the project I made duuring the 2023 Global Games Jam.</p>
 									<ul class="actions">
 										<!--<li><a href="generic.html" class="button">See more</a></li>-->
 									</ul>
