comment out man on

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								</div>
 							</div>
 						</section>
-						<section>
+						<!--<section>
 							<a href="#" class="image"><img src="images/pacman.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -85,11 +85,11 @@
 									<h3>C# / Unity</h3>
 									<p>This is a side scrolling shooter game that is made in the unity engine for my Rapid Games Prototyping Module</p>
 									<ul class="actions">
-										<!--<li><a href="generic.html" class="button">See more</a></li>-->
+										<li><a href="generic.html" class="button">See more</a></li>
 									</ul>
 								</div>
 							</div>
-						</section>
+						</section>-->
 						<section>
 							<a href="#" class="image"><img src="images/Titan.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
