--- a/index.html
+++ b/index.html
@@ -13,25 +13,11 @@
 		
 		
 
-		<!-- stuff for pop up videos following https://www.youtube.com/watch?v=US8ePkxYI3E-->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 		
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<style>
-		.mfp-hide{
-			display : none !important;
-		}
-
-		iframe{
-			margin-left:0% ;
-		}
-		</style>
-
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -75,11 +61,11 @@
 							<a href="#" class="image"><img src="images/Marble.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Marble Madness</h2>
-										<h3>Unity / C# / Framework</h3>
-									<p>This is the project I produced in semester 1 of my Rapid Games Prototyping module.</p>
+									<h2>Pokemon Battles</h2>
+										<h3>Unity / C# </h3>
+									<p>This is the project I started in semester 2 of my Rapid Games Prototyping module. The idea being a top down shooter where you fight pokemon with it progressively getting harder and trying to set a high score</p>
 									<ul class="actions">
-										<!--<li><a href="generic.html" class="button">See more</a></li>-->
+										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#PokeVideo">See more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -92,7 +78,9 @@
 									<h3>C++ / S2D Framework</h3>
 									<p>This is an io style game in the style of pacman that I made in my Fundamentals of Games and Graphical Systems Module.</p>
 									<ul class="actions">
-										<!--<li><a href="generic.html" class="button">See more</a></li>-->
+										<!-- Vertically centered modal -->
+										<!--<li><a href="#Pacman" class="button">See more</a></li>-->
+										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#PacmanVideo">See more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -116,20 +104,9 @@
 								<div class="inner">
 									<h2>Titan's Roots</h2>
 									<h3>C# / Unity</h3>
-									<p>This is the project I made during the 2023 Global Games Jam.</p>
+									<p>This is the project I made during the 2023 Global Games Jam with a group of friends where I handled half of the programming. I programmed everything that wasn't player movement. This was the health, enemies, health packs to increase health and more...</p>
 									<ul class="actions">
-										<li><a href="#Titans" class="button"id="videolink">See more</a></li>
-										
-										<div id="Titans" class="mfp-hide" style="max-width: 17%; margin: 0 auto">
-											<iframe width="720" height="480" src="https://www.youtube.com/embed/FOylzuvFABU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-										</div>
-
-										<script>
-											$('#videolink').magnificPopup({
-												type:'inline',
-												midClick:true
-											})
-										</script>
+										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#TitanVideo">See more</a></li>
 
 									</ul>
 								</div>
@@ -206,5 +183,39 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+
+
+			<div class="modal fade" id="TitanVideo" >
+				<div class="modal-dialog modal-dialog-centered" role="document">
+				  <div class="modal-content">
+					<div class="modal-body">
+					  <video width = "100%" controls>	
+						<source src="Images/Titans.mp4" type="video/mp4">
+					  </video>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="modal fade" id="PokeVideo" >
+				<div class="modal-dialog modal-dialog-centered" role="document">
+				  <div class="modal-content">
+					<div class="modal-body">
+					  <video width = "100%" controls>	
+						<source src="Images/Pokemon.mp4" type="video/mp4">
+					  </video>
+					</div>
+				  </div>
+				</div>
+			  </div><div class="modal fade" id="PacmanVideo" >
+				<div class="modal-dialog modal-dialog-centered" role="document">
+				  <div class="modal-content">
+					<div class="modal-body">
+					  <video width = "100%" controls>	
+						<source src="Images/Pacman.mp4" type="video/mp4">
+					  </video>
+					</div>
+				  </div>
+				</div>
+			  </div>
 	</body>
 </html>
