--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/Marble.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/Pokemon.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Pokemon Battles</h2>
