--- a/index.html
+++ b/index.html
@@ -63,24 +63,9 @@
 								<div class="inner">
 									<h2>Pokemon Battles</h2>
 										<h3>Unity / C# </h3>
-									<p>This is the project I started in semester 2 of my Rapid Games Prototyping module. The idea being a top down shooter where you fight pokemon with it progressively getting harder and trying to set a high score</p>
+									<p>This is the project I started in semester 2 of my Rapid Games Prototyping module. The idea being a top down shooter where you fight pokemon with it progressively getting harder and trying to set a high score...</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#PokeVideo">See more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pacman.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Pacman v 100 Ghosts</h2> 
-									<h3>C++ / S2D Framework</h3>
-									<p>This is an io style game in the style of pacman that I made in my Fundamentals of Games and Graphical Systems Module.</p>
-									<ul class="actions">
-										<!-- Vertically centered modal -->
-										<!--<li><a href="#Pacman" class="button">See more</a></li>-->
-										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#PacmanVideo">See more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -99,7 +84,7 @@
 							</div>
 						</section>-->
 						<section>
-							<a href="#" class="image"><img src="images/Titan.png" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/Titan.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Titan's Roots</h2>
@@ -108,6 +93,21 @@
 									<ul class="actions">
 										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#TitanVideo">See more</a></li>
 
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pacman.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Pacman v 100 Ghosts</h2> 
+									<h3>C++ / S2D Framework</h3>
+									<p>This is an io style game in the style of pacman that I made in my Fundamentals of Games and Graphical Systems Module...</p>
+									<ul class="actions">
+										<!-- Vertically centered modal -->
+										<!--<li><a href="#Pacman" class="button">See more</a></li>-->
+										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#PacmanVideo">See more</a></li>
 									</ul>
 								</div>
 							</div>
