hopefully fixed videos

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 				  <div class="modal-content">
 					<div class="modal-body">
 					  <video width = "100%" controls>	
-						<source src="Images/Titans.mp4" type="video/mp4">
+						<source src="https://github.com/jacobharwood7/jacobharwood7.github.io/raw/main/images/Titans.mp4" type="video/mp4">
 					  </video>
 					</div>
 				  </div>
@@ -201,7 +201,7 @@
 				  <div class="modal-content">
 					<div class="modal-body">
 					  <video width = "100%" controls>	
-						<source src="Images/Pokemon.mp4" type="video/mp4">
+						<source src="https://github.com/jacobharwood7/jacobharwood7.github.io/raw/main/images/Pokemon.mp4" type="video/mp4">
 					  </video>
 					</div>
 				  </div>
@@ -211,7 +211,7 @@
 				  <div class="modal-content">
 					<div class="modal-body">
 					  <video width = "100%" controls>	
-						<source src="Images/Pacman.mp4" type="video/mp4">
+						<source src="https://github.com/jacobharwood7/jacobharwood7.github.io/raw/main/images/Pacman.mp4" type="video/mp4">
 					  </video>
 					</div>
 				  </div>
