--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 							<h2>Welcome to my Portfolio</h2>
 							<p>C++ / Game Dev</p>
 							<a href="#" class="image"><img src="images/profilepic.jpg" alt="" data-position="center center" /></a>
-							<p>Level 4 BSc Computer Games Development (Hons) student. 
+							<p>Level 5 BSc Computer Games Development (Hons) student. 
 								Currently studying at Staffordshire University
 								I am an aspiring computer games developer with a passion for games. 
-								More specifically sports simulation games and open world action and adventure games.</p>
+								I love not only playing games like everyone else but also making games too!</p>
                             <ul class="actions">
                                 <!--<li><a href="#one" class="button scrolly">Learn more</a></li>-->
                             </ul>
@@ -125,22 +125,22 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>C++</h3>
-									<p>As a part of half of the modules I took at Level 4 for my University course I learnt C++. This included everything from 'Hello World!' to pointers even including reading and writing files.</p>
+									<p>As a part of the modules I have taken for my University course I have learnt C++. This included everything from 'Hello World!' to pointers and everything else in between.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>Unreal Engine 5</h3>
+									<p> For my course the engine we use to learn all about game development is Unreal. Now I am confident in creating games that take advantage of events and other methods to create modular functions to build games in an anonymously modular designed way.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Unity</h3>
-									<p>In my Rapid Games Prototyping module I built on knowledge of unity that I already had from personal projects to create the 'Marble Madness' project and I am currently working on a project called 'Man On' in unity.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Photoshop / Photopea</h3>
-									<p> For most of my projects I have had to create assets. I have done this with photoshop. I had previous knowledge of photopea from personal projects as I couldn't afford adobe :( . However now I have access to photoshop I am transferring those skills</p>
+									<p>In my Rapid Games Prototyping module I built on knowledge of Unity that I already had from personal projects to create the 'Pokemon Battles' project and several other projects as a part of the module to learn about different ways to use Unity </p>
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>C#</h3>
-									<p>Similar to C++ I have learnt this language as a part of my modules. Yet I had some prior knowledge from previous attempts at learning unity.</p>
+									<p>Similar to C++ I have learnt this language as a part of my modules. Yet I had some prior knowledge from previous attempts at learning Unity.</p>
 								</section>
 							</div>
 						</div>
