--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		
 		
-
-		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -62,7 +60,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Pokemon Battles</h2>
-										<h3>Unity / C# </h3>
+										<h3>Unity / C# / Year 1</h3>
 									<p>This is the project I started in semester 2 of my Rapid Games Prototyping module. The idea being a top down shooter where you fight pokemon with it progressively getting harder and trying to set a high score...</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#PokeVideo">See more</a></li>
@@ -88,7 +86,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Titan's Roots</h2>
-									<h3>C# / Unity</h3>
+									<h3>C# / Unity / Game Jam</h3>
 									<p>This is the project I made during the 2023 Global Games Jam with a group of friends where I handled half of the programming. I programmed everything that wasn't player movement. This was the health, enemies, health packs to increase health and more...</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#TitanVideo">See more</a></li>
@@ -98,16 +96,14 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pacman.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/HPThumb.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Pacman v 100 Ghosts</h2> 
-									<h3>C++ / S2D Framework</h3>
-									<p>This is an io style game in the style of pacman that I made in my Fundamentals of Games and Graphical Systems Module...</p>
+									<h2>Death Eater Invasion</h2> 
+									<h3>C++ / Unreal Engine 5 / Year 2</h3>
+									<p>This is an zombie style game based on the harry potter world that I made during my 'C++ for Engines' Module in Year 2. I combined free online assets and my own learning to create this game...</p>
 									<ul class="actions">
-										<!-- Vertically centered modal -->
-										<!--<li><a href="#Pacman" class="button">See more</a></li>-->
-										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#PacmanVideo">See more</a></li>
+										<li><a href="generic.html" class="button"data-bs-toggle="modal" data-bs-target="#HPVideo">See more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -206,12 +202,12 @@
 					</div>
 				  </div>
 				</div>
-			  </div><div class="modal fade" id="PacmanVideo" >
+			  </div><div class="modal fade" id="HPVideo" >
 				<div class="modal-dialog modal-dialog-centered" role="document">
 				  <div class="modal-content">
 					<div class="modal-body">
 					  <video width = "100%" controls>	
-						<source src="https://github.com/jacobharwood7/jacobharwood7.github.io/raw/main/images/Pacman.mp4" type="video/mp4">
+						<source src="https://github.com/jacobharwood7/jacobharwood7.github.io/raw/main/images/HP.mp4" type="video/mp4">
 					  </video>
 					</div>
 				  </div>
